--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.6",
+    "bufferutil": "^4.0.3",
+    "core-js": "^3.35.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
+    "js-cookie": "^3.0.5",
+    "next": "^13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io-client": "^4.7.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "utf-8-validate": "^5.0.5",
+    "ws": "^8.16.0"
   }
 }
