--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.21.3",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "utf-8-validate": "^5.0.5",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   }
 }
