--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.35.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "next": "^13.4.10",
     "postcss": "8.4.26",
@@ -28,7 +29,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "3.3.3",
